# pybites-carbon

./: .env-template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  script.py
.github/workflows/: publish-to-test-pypi.yml  python-app.yml
carbon/: __init__.py  __main__.py  carbon.py  cli.py  main.py
tests/: test_carbon.py
