[project]
name = "pybites-carbon"
version = "0.2.0"
authors = [{name = "Pybites", email = "info@pybit.es"}]
description = "Create code images from CLI using carbon"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.47.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pytest-playwright>=0.5.2",
    "ruff>=0.7.0",
]
