[project]
name = "pybites-carbon"
version = "0.7.1"
authors = [{name = "Pybites", email = "info@pybit.es"}]
description = "Create code images from CLI using carbon"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.47.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "pytesseract>=0.3.13",
    "pytest-playwright>=0.5.2",
    "ruff>=0.7.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[project.urls]
Documentation = "https://www.youtube.com/watch?v=oxeGhlJQll8"
Source = "https://github.com/PyBites-Open-Source/pybites-carbon"

[project.scripts]
carbon = "carbon.__main__:main"
